// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio.Group renders radio in group 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiFormGroup-root"
      role="radiogroup"
    >
      <label
        class="FormControlLabel-root Radio-root Radio-labelWithRightSpacing"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input"
              name="my-group"
              type="radio"
              value="VALUE+1"
            />
            <div
              class="Radio-uncheckedIcon"
            />
          </span>
        </span>
        <span
          class="FormLabel-root FormLabel-inline FormControlLabel-label Radio-label"
        >
          <span
            class="FormLabel-text"
          >
            LABEL+1
          </span>
        </span>
      </label>
      <label
        class="FormControlLabel-root Radio-root Radio-labelWithRightSpacing"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input"
              name="my-group"
              type="radio"
              value="VALUE+2"
            />
            <div
              class="Radio-uncheckedIcon"
            />
          </span>
        </span>
        <span
          class="FormLabel-root FormLabel-inline FormControlLabel-label Radio-label"
        >
          <span
            class="FormLabel-text"
          >
            LABEL+2
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`disabled radio button renders disabled version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      aria-disabled="true"
      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root PrivateSwitchBase-disabled Mui-disabled Radio-disabled Mui-disabled Mui-disabled"
      tabindex="-1"
    >
      <span
        class="MuiIconButton-label"
      >
        <input
          class="PrivateSwitchBase-input"
          disabled=""
          type="radio"
          value=""
        />
        <div
          class="Radio-uncheckedIcon"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`radio button renders default radio button 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      aria-disabled="false"
      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root"
    >
      <span
        class="MuiIconButton-label"
      >
        <input
          class="PrivateSwitchBase-input"
          type="radio"
          value=""
        />
        <div
          class="Radio-uncheckedIcon"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`radio button renders default radio button 2`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      aria-disabled="false"
      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root"
    >
      <span
        class="MuiIconButton-label"
      >
        <input
          class="PrivateSwitchBase-input"
          type="radio"
          value=""
        />
        <div
          class="Radio-uncheckedIcon"
        />
      </span>
    </span>
  </div>
</div>
`;
